2002-10-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03354] display current line number
	* display.c (displayBuffer): %3d -> %d

2002-10-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 3
	* version.c.in: update

2002-10-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03352] w3mimgsize is not necessary.
	* XMakefile (IMGSIZE): removed
	* config.h.dist (IMGSIZE): removed
	* configure (imgtarget): remove IMGSIZE
		(config.h): remove IMGSIZE
	* rc.c (CMT_IMGSIZE): removed
	* doc/README.img: remove imgsize
	* w3mimgsize.c: removed

2002-10-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03351] w3m core dump
	* table.c (feed_table_tag): fix rendering problem (maybe security hole?)

2002-10-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00796]
	* configure: expand here. ($var in Makefile is $v + ar)
	* XMakefile: clean w3mimg/**/*.o

2002-10-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00795]
	* configure: IMLIB_CONFIG, IMLIB2_CONFIG, GDKPIXBUF_CONFIG
	* rc.c (CMT_DISP_IMAGE): need if not defined USE_IMAGE

2002-10-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 2
	* version.c.in: update

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00788]
	* fm.h (displayImage): FALSE ifndef USE_IMAGE
	* rc.c (displayImage): display_image even if USE_IMAGE undefined
		(sync_with_options): display_image is forced to be FALSE 
				ifndef USE_IMAGE

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00783] hsaka@mth.biglobe.ne.jp (Hironori SAKAMOTO)
	  add display_lineinfo option
	* display.c (displayBuffer): check displayLineInfo
	* fm.h (displayLineInfo): added
	* rc.c (CMT_DISPLINEINFO): added
		(display_lineinfo): added
	* NEWS (rc: display_lineinfo): add

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00781] "Clemens Fischer" <ino-waiting@gmx.net>
	  zope doesn't recognize implied *LWS in accept-language